fix: standardize backend Java toolchain to 17 and remove Java21-only List.getFirst()